syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "github.com/key-hh/grpc-go-example/stream";

package stream;

service Streamer {
  rpc sendToStream(stream StreamRequest) returns (StreamResponse) {}
  rpc receiveFromStream (StreamRequest) returns (stream StreamResponse) {}
  rpc chatInStream (stream StreamRequest) returns (stream StreamResponse) {}
}

message StreamRequest {
  string type = 1;
  string name = 2;
}

message StreamResponse {
  string resp_type = 1;
  string name = 2;
  int32 age = 3;
}
